# KK_L3

./: .gitignore  CMakeLists.txt  KK_GR_A_LAB_3_PATRYK_GRZYWACZ.md
data/: in.txt
headers/: AffineCoder.h  BiGramMatrixGenerator.h  FilesUtil.h
src/: AffineCoder.cpp  main.cpp  main1.cpp  main2.cpp
